--- a/src/styles.scss
+++ b/src/styles.scss
@@ -256,6 +256,7 @@ body {
   }
   .swiper-slide {
     height: auto;
+    padding: 20px;
   }
   @media screen and (max-width: 1023px),
   screen and (max-height: 800px) {
