--- a/src/app/components/advantage/advantage.component.scss
+++ b/src/app/components/advantage/advantage.component.scss
@@ -31,7 +31,7 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.05);
   }
 }
 
@@ -52,6 +52,9 @@
     text-align: center;
     margin-bottom: 30px;
     font-weight: 900;
+    @include media(ds) {
+      font-size: 22px;
+    }
     @include media(mdx) {
       font-size: 20px;
     }
